resources/css/style.css
/* ------ setting up defaults for entire page of TEA COZY ----- */
body {
  margin: 0; /* make sure no  gap between top of browser viewport and top of header  */
  font-family: Helvetica, sans-serif;
  font-size: 22px;
  color: seashell;
  background-color: black;
  opacity: 0.9;
}


/* ---- header ---- */
header {
  display: inline-flex;
  align-items: center;
  justify-content: space-between;
  position: fixed;
  margin: auto;
  z-index: 10;
  width: 100%;
  height: 69px;
  border-bottom: 1px solid seashell;
  background-color: black;
}

header .logo {
}
.logo img {
  height: 50px;
  padding-left: 10px;
  padding-top: 10px;
}

header nav {
  display: flex;
  justify-content: space-around;
  width: 400px;
  padding-right: 10px;
  font-size: 22px;
  opacity: 0.9;
}
a:link {
    color: seashell;
}
a:visited {
    color: seashell;
}
a:hover {
    color: blue;
}

/* ---- main content area for TEA COZY --- */
.content {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 69px;
}

/* ---- MISSION ---- */
#mission {
  background-image: url("../images/img-mission-background.jpg");
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 700px;
  width: 1200px;
}

.image_content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: white;
  text-align: center;
}
.mission-logo.image_content span {
  margin: 7 auto; /* initially set top-bottom margin to 10 and seemed to make no difference if I made it smaller */
  background-color: black;
  z-index: 8;
}

/* ---- FEATURED TEAS ---- */

/* following container tries to align section title with the image collection below */
#feaured_tea {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: auto;
  color: white;
  width: 1000px;
}
.teas-of-the-month.image_content {
  text-align: center;
  font-weight: bold;
}
.teas-of-the-month {
  margin-bottom: 0;
}

/* got all the image-caption combos to wrap around in the row (1000px wide) and each subgroup center on each row they display in */
.teas {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  width: 1000px;
}
/* get image and caption to center with each other */
.tea-or-cake {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  font-weight: bold;
}
/* size the images 200x300 and add margings between images and also between image and caption */
.tea-or-cake img {
  width: 300px;
  height: 200px;
  margin-bottom: 10px;
  margin-left: 10px;
  margin-right: 10px;
}
/* get captions closer to their images */
.tea-or-cake p {
  margin-top: 0;
}

/* ---- LOCATIONS ---- */

#locations {
  background-image: url("../images/img-locations-background.jpg");
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  height: 500px;
  width: 1200px;
}

.locations-bkgd.image_content span {
  margin: 7 auto; /* initially set top-bottom margin to 10 and seemed to make no difference if I made it smaller */
  z-index: 8;
}

.all_locations {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  width: 1200px;
}

.cafe {
  display: flex;
  flex-direction: column;
  justify-content: center;
  opacity: 1;
  width: 300px;
  background-color: black;
  margin: 15px 20px 15px 20px;
}

/* --- Contact --- */
.contact {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

